main-nav z-index fix

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -26,7 +26,7 @@
       top 0px
       left 0px
       right 0px
-      z-index 10000
+      z-index 5000
       background-color #fff
     ul
       list-style none
